Added jlink task to CLI module.